Phone gallery visibility fixed / move onto colour switchers next (See readme)

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -283,7 +283,7 @@ footer a {
     }
 
     .container div {
-        height: 50vh;
+        height: 65vh;
         width: 40%;
     }
 
@@ -346,7 +346,7 @@ footer a {
     }
 
     .container div {
-        height: 50vh;
+        height: 65vh;
         width: 90%;
     }
 
